--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,31 @@ html {
     transform: unset;
   }
 }
+
+@keyframes fadeOut {
+  0% {
+    width: 0;
+    opacity: 0;
+    /* transform: scale(0); */
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+    /* transform: scale(1); */
+  }
+}
+
+@keyframes zoom-out {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 0.5;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
