--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -4,7 +4,6 @@
 }
 
 .note__background img {
-  width: 11;
   height: 110%;
 }
 
@@ -16,7 +15,7 @@
   font-weight: 300;
   font-size: 1.4rem;
   line-height: 18px;
-  word-break: break-all;
+  word-break: keep-all;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   display: -webkit-box;
