--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,26 @@ html {
   font-size: 62.5%;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 50px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #f39f95;
+  border-radius: 50px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #ca8c83;
+}
+
+/* Animation */
 @keyframes fadeSlideUp {
   0% {
     opacity: 0;
@@ -45,6 +65,17 @@ html {
   50% {
     opacity: 0.5;
     transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
