--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -12,6 +12,7 @@
   grid-row: 1 / 3;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
   cursor: pointer;
   overflow: hidden;
   position: relative;
