--- a/src/components/MainPageLayout/MainPageLayout.css
+++ b/src/components/MainPageLayout/MainPageLayout.css
@@ -26,7 +26,10 @@
   height: 48px;
   display: flex;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
   border-radius: 15px;
+  border: 2px solid #87a173;
+  overflow: hidden;
 }
 
 .frame-main-page__container .right-section .search-bar input {
@@ -36,19 +39,13 @@
   outline: none;
   font-size: 1.6rem;
   color: #87a173;
-  border-width: 2px;
-  border-style: solid;
-  border-top-color: #87a173;
-  border-bottom-color: #87a173;
-  border-left-color: #87a173;
-  border-right-width: 0;
-  border-radius: 15px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  border: none;
 }
 
 .frame-main-page__container .right-section .search-bar input:focus ~ button {
   color: #87a173;
+  visibility: visible;
+  display: inline-block;
 }
 
 .frame-main-page__container .right-section .search-bar button {
@@ -56,19 +53,17 @@
   height: 100%;
   outline: none;
   font-size: 2rem;
-  border-width: 2px;
-  border-style: solid;
-  border-top-color: #87a173;
-  border-bottom-color: #87a173;
-  border-right-color: #87a173;
-  border-left-width: 0;
-  border-radius: 15px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border: none;
   background-color: #fff;
   cursor: pointer;
   color: #fff;
-  transition: all 0.2s;
+  visibility: hidden;
+  display: none;
+  transition: opacity 0.2s;
+}
+
+.frame-main-page__container .right-section .search-bar button:hover {
+  opacity: 0.6;
 }
 
 .frame-main-page__container .right-section .filter-tags {
@@ -99,11 +94,14 @@
 .frame-main-page__container .right-section .filter-tags .tag-list li {
   margin-bottom: 18px;
   margin-right: 20px;
-  padding: 2px 6px;
   border-radius: 10px;
   display: inline-flex;
   align-items: center;
   border: 1px solid;
+}
+
+.frame-main-page__container .right-section .filter-tags .tag-list li a {
+  padding: 2px 6px;
 }
 
 .frame-main-page__container .right-section .filter-tags .tag-list li span {
@@ -184,6 +182,12 @@
 
 .frame-main-page__container .left-section {
   width: 320px;
+}
+
+.frame-main-page__container .left-section .note-motivation {
+  position: sticky;
+  top: calc(85px + 20px);
+  left: 0;
 }
 
 .frame-main-page__container .center-section {
