--- a/src/components/TopNavBar/TopNavBar.css
+++ b/src/components/TopNavBar/TopNavBar.css
@@ -92,6 +92,13 @@
   position: relative;
 }
 
+.top-nav__container .account-manage .avatar img {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+
 .top-nav__container .account-manage .avatar:hover {
   opacity: 0.6;
 }
