--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,33 @@ html {
     transform: scale(1);
   }
 }
+
+@media screen and (min-width: 1024px) {
+  #device-message {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #device-message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999999;
+    background: linear-gradient(to bottom, #fba1a1 8%, #fff 60%, #ff8080);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #device-message p {
+    margin: 18px 20px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1.7;
+    text-align: center;
+  }
+}
