--- a/src/components/TopNavBar/TopNavBar.css
+++ b/src/components/TopNavBar/TopNavBar.css
@@ -7,7 +7,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .top-nav__container {
@@ -35,17 +35,35 @@
 }
 
 .top-nav__container .navigate-list li {
-  margin: 0 14px;
+  margin: 0 10px;
+  padding: 10px;
   display: flex;
-  align-items: flex-end;
+  align-items: baseline;
 }
 
 .top-nav__container .navigate-list li span {
   margin-left: 6px;
   font-weight: 600;
-  font-size: 2.4rem;
-  line-height: 30px;
+  font-size: 2rem;
   color: #87a173;
+  position: relative;
+}
+
+.top-nav__container .navigate-list li span.underline::before {
+  content: "";
+  width: 100%;
+  border: 2px solid #ef92aa;
+  border-radius: 20px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+  position: absolute;
+  bottom: -5px;
+}
+
+.top-nav__container .navigate-list li:hover span.underline::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .top-nav__container .feature-list {
@@ -133,7 +151,7 @@
     opacity: 0.5;
   }
   100% {
-    height: 120px;
+    height: 80px;
     opacity: 1;
   }
 }
@@ -156,4 +174,19 @@
 
 .top-nav__container .account-manage .menu li:hover {
   background-color: #eae8e8;
+}
+
+.top-nav__container .sign-in__btn {
+  padding: 9px 8px;
+  font-size: 1.6rem;
+  font-weight: 500;
+  border-radius: 8px;
+  border: 2px solid #89a271;
+  background-color: transparent;
+  transition: all 0.15s ease-in;
+}
+
+.top-nav__container .sign-in__btn:hover {
+  color: #ef92aa;
+  border-color: #ef92aa;
 }
