--- a/src/pages/Book/Book.css
+++ b/src/pages/Book/Book.css
@@ -118,6 +118,10 @@
   transform: rotateY(-180deg) translateX(5px);
 }
 
+.flipped .book-cover__left-front {
+  z-index: -1;
+}
+
 .book-cover__right {
   width: 100%;
   height: 100%;
@@ -273,10 +277,13 @@
 .book-cover__left-front .content .label {
   margin-bottom: 23px;
   font-size: 90px;
+  color: #87a173;
 }
 
 .book-cover__left-front .content .name {
-  font-size: 80px;
+  font-size: 59px;
+  color: #ff8080;
+  word-break: keep-all !important;
 }
 
 .book-cover__left-front .content .label,
@@ -284,7 +291,6 @@
   font-family: iCiel Supa Mega Fantastic;
   font-weight: 400;
   line-height: 77px;
-  color: #87a173;
   word-break: break-all;
 }
 
